typescript/checker/tests/conformance/async/es6/asyncQualifiedReturnType_es6.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            134,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/asyncQualifiedReturnType_es6.ts:8:21
  |
8 | async function f(): X.MyPromise<void> {
  |                     ^^^^^^^^^^^^^^^^^

